<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Cluster-Vault</string>
    <string name="app_name_full" translatable="false">Cluster-Vault</string>
    <string name="org_name_full" translatable="false">ZaidAlamgir</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_edit_icon">Edit icon</string>
    <string name="action_reset_usage_count">Reset usage count</string>
    <string name="action_reset_usage_count_dialog">Are you sure you want to set the usage count of this entry to 0?</string>
    <string name="action_default_icon">Restore default icon</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="all">All</string>
    <string name="issuer">Issuer</string>
    <string name="yandex_pin">PIN (4–16 digits)</string>
    <string name="motp_pin">PIN (4 digits)</string>
    <string name="suggested">Suggested</string>
    <string name="usage_count">Usage count</string>
    <string name="warning">Warning</string>
    <string name="pref_cat_appearance_app">App</string>
    <string name="pref_cat_appearance_entries">Entries</string>
    <string name="pref_cat_backups_android">Android</string>
    <string name="pref_cat_backups_auto">Automatic backups</string>
    <string name="pref_section_behavior_title">Behavior</string>
    <string name="pref_section_behavior_summary">Customize the behavior when interacting with the entry list.</string>
    <string name="pref_section_appearance_title">Appearance</string>
    <string name="pref_section_appearance_summary">Adjust the theme, language and other settings that affect the appearance of the app.</string>
    <string name="pref_section_security_title">Security</string>
    <string name="pref_section_security_summary">Configure encryption, biometric unlock, auto lock and other security settings.</string>
    <string name="pref_section_import_export_title">Import &amp; Export</string>
    <string name="pref_section_import_export_summary">Import backups of Cluster or other authenticator apps. Create manual exports of your Cluster vault.</string>
    <string name="pref_section_audit_log_title">Audit log</string>
    <string name="pref_section_audit_log_summary">Find a list of all reported important events that happened within the app.</string>
    <string name="pref_section_backups_title">Backups</string>
    <string name="pref_section_backups_summary">Set up automatic backups to a location of your choosing or enable participation in Android\'s cloud backup system.</string>
    <string name="pref_section_icon_packs">Icon packs</string>
    <string name="pref_section_icon_packs_summary">Manage and import icon packs</string>
    <string name="pref_select_theme_title">Theme</string>
    <string name="pref_dynamic_colors_title">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">Apply an overlay based on the colors of your Android theme</string>
    <string name="pref_view_mode_title">View mode</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_show_icons_title">Show icons</string>
    <string name="pref_show_icons_summary">Display icons next to each entry</string>
    <string name="pref_code_group_size_title">Code digit grouping</string>
    <string name="pref_code_group_size_summary">Select number of digits to group codes by</string>
    <string name="pref_account_name_position_title">Show the account name</string>
    <string name="pref_show_next_code_title">Show next code</string>
    <string name="pref_show_next_code_summary">Generate and show the next code ahead of time</string>
    <string name="pref_expiration_state_title">Indicate when codes are about to expire</string>
    <string name="pref_expiration_state_summary">Change the color of the codes and have them blink when they are about to expire</string>
    <string name="pref_expiration_state_fallback">Change the color of the codes when they are about to expire</string>
    <string name="pref_shared_issuer_account_name_title">Only show account name when necessary</string>
    <string name="pref_shared_issuer_account_name_summary">Only show account names whenever they share the same issuer. Other account names will be hidden.</string>
    <string name="pref_account_name_position_summary_override">This setting is overridden by the tiles view mode. Account name will be shown below the issuer.</string>
    <string name="pref_import_file_title">Import from file</string>
    <string name="pref_import_file_summary">Import tokens from a file</string>
    <string name="pref_android_backups_title">Android cloud backups</string>
    <string name="pref_android_backups_summary">Allow Android\'s cloud backup system to include Cluster\' vault in its backups. This is only supported for encrypted vaults.</string>
    <string name="pref_android_backups_hint"><i>Device-to-device (D2D) backups are always allowed, regardless of the setting above</i></string>
    <string name="pref_backups_title">Automatically back up the vault</string>
    <string name="pref_backups_summary">Automatically create backups of the vault on external storage when changes are made. This is only supported for encrypted vaults.</string>
    <string name="pref_backups_reminder_title">Backup reminder</string>
    <string name="pref_backups_reminder_summary">Show a reminder to backup your vault in case you haven\'t backed up your latest changes.</string>
    <string name="pref_backups_reminder_dialog_title">Disable backup reminder</string>
    <string name="pref_backups_reminder_dialog_summary">Disabling this reminder means Cluster won\'t tell you whether or not you have changes that are not backed up yet. This puts you at risk of losing access to your tokens. Are you sure you want to disable the reminder?</string>
    <string name="pref_backups_versioning_strategy_title">Backup strategy</string>
    <string name="pref_backups_versioning_strategy_keep_x_versions">Keep a number of versions</string>
    <string name="pref_backups_versioning_strategy_single_backup">Single backup</string>
    <string name="pref_backups_versioning_strategy_single_backup_warning">The selected backup strategy is not reliable and not recommended. A single backup failure could lead to losing your only backup.</string>
    <string name="pref_backups_versioning_strategy_dialog_title">Select a backup strategy</string>
    <string name="pref_backups_location_title">Backup location</string>
    <string name="pref_backups_location_summary">Backups will be stored at</string>
    <string name="pref_backup_location_summary">Backup will be stored at</string>
    <string name="pref_backups_trigger_title">Trigger backup</string>
    <string name="pref_backups_trigger_summary">Manually trigger a backup</string>
    <string name="pref_backups_versions_title">Number of versions to keep</string>
    <string name="pref_backups_versions_infinite">\u221E</string>
    <plurals name="pref_backups_versions_summary">
        <item quantity="one">Keep %1$d version of the backup</item>
        <item quantity="other">Keep %1$d versions of the backup</item>
    </plurals>
    <string name="pref_backups_versions_infinite_summary">Keep an infinite number of versions of the backup</string>
    <string name="pref_import_app_title">Import from app</string>
    <string name="pref_import_app_summary">Import tokens from an app (requires root access)</string>
    <string name="pref_export_title">Export</string>
    <string name="pref_export_summary">Export the vault</string>
    <string name="pref_password_reminder_title">Password reminder</string>
    <string name="pref_google_auth_export_title">Export for Google Authenticator</string>
    <string name="pref_google_auth_export_descriptor">Generates export QR codes compatible with Google Authenticator</string>
    <string name="pref_google_auth_export_no_data">No data to export</string>
    <plurals name="pref_google_auth_export_incompatible_entries">
        <item quantity="one">Skipped %d incompatible entry</item>
        <item quantity="other">Skipped %d incompatible entries</item>
    </plurals>
    <string name="pref_password_reminder_summary">Show a %s reminder to enter the password, so that you don\'t forget it.</string>
    <string name="pref_password_reminder_summary_disabled">Disabled</string>
    <string name="pref_secure_screen_title">Screen security</string>
    <string name="pref_secure_screen_summary">Block screenshots and other attempts to capture the screen within the app</string>
    <string name="pref_tap_to_reveal_title">Tap to reveal</string>
    <string name="pref_tap_to_reveal_summary">Tokens will be hidden by default. Tap on the tokens to reveal code.</string>
    <string name="pref_tap_to_reveal_time_title">Timeout for tap to reveal</string>
    <string name="pref_auto_lock_title">Auto lock</string>
    <string name="pref_auto_lock_summary">When %s</string>
    <string name="pref_auto_lock_summary_disabled">Disabled</string>
    <string name="pref_auto_lock_prompt">Automatically lock Cluster when</string>
    <string name="pref_auto_lock_type_back_button">The back button is pressed</string>
    <string name="pref_auto_lock_type_minimize">The app is minimized</string>
    <string name="pref_auto_lock_type_device_lock">The device is locked</string>
    <string name="pref_backup_password_category">Backup &amp; Export</string>
    <string name="pref_backup_password_title">Separate password for backup &amp; export</string>
    <string name="pref_backup_password_summary">If enabled, the password that is used to unlock the app can\'t be used to decrypt backups and exports anymore.</string>
    <string name="pref_backup_password_change_title">Change password for backup &amp; export</string>
    <string name="pref_backup_password_change_summary">Set a new password that\'ll be used to encrypt the vault during backup and export.</string>
    <string name="pref_encryption_title">Encryption</string>
    <string name="pref_encryption_summary">Encrypt the vault and unlock it with a password or biometrics</string>
    <string name="pref_biometrics_title">Biometric unlock</string>
    <string name="pref_biometrics_summary">Allow biometric authentication to unlock the vault</string>
    <string name="pref_search_behavior_summary">Search through: %s</string>
    <string name="pref_search_behavior_prompt">Search in any of the following fields</string>
    <string name="pref_search_behavior_type_name">Name</string>
    <string name="pref_search_behavior_type_issuer">Issuer</string>
    <string name="pref_search_behavior_type_note">Note</string>
    <string name="pref_search_behavior_type_groups">Groups</string>
    <string name="pref_set_password_title">Change password</string>
    <string name="pref_set_password_summary">Set a new password which you will need to unlock your vault</string>
    <string name="no_events_title">No reported events</string>
    <string name="no_events_description">No important events have been reported within the app</string>
    <string name="event_title_vault_unlocked">Vault unlocked</string>
    <string name="event_description_vault_unlocked">The vault has been successfully unlocked</string>
    <string name="event_title_backup_created">Backup created</string>
    <string name="pw_vault_title_hint">Title</string>
    <string name="pw_vault_username_hint">Username</string>
    <string name="pw_vault_password_hint">Password</string>
    <string name="pw_vault_url_hint">Website URL</string>
    <string name="pw_vault_custom_fields_title">Custom Fields</string>
    <string name="pw_vault_add_custom_field">Add custom field</string>
    <string name="pw_vault_field_label_hint">Field label</string>
    <string name="pw_vault_field_value_hint">Value</string>
</resources>